feat: implementadas todas as operações do CRUD